# clouddisk_v2

./: .gitignore  README.md  go.mod  go.sum  main.go  patch.diff
.trunk/: actions  logs  notifications  out  tools
forward_part/config/nginx/: nginx.conf  nginx.pid
forward_part/config/nginx/lua/: balancer.lua  consul_service.lua
forward_part/gateway/: CMakeLists.txt  ConsulRegister.cpp  ConsulRegister.h  MyAppData.h  config.json  config.yaml  main.cc
forward_part/gateway/ArcCache/: ArcCache.h  ArcCacheNode.h  ArcLfuPart.h  ArcLruPart.h  ICachePolicy.h
forward_part/gateway/controllers/: AIController.cc  AIController.h  AccountController.cc  AccountController.h  FileController.cc  FileController.h  Hash.cc  Hash.h  HealthController.cc  HealthController.h
forward_part/gateway/filters/: jwt_decode.cc  jwt_decode.h
forward_part/gateway/test/: CMakeLists.txt
forward_part/grpc_srv/account_srv/: CMakeLists.txt  accountServer.cpp  accountServer.h  main.cpp
forward_part/internal/: consul.cpp  consul.h  internal.cpp  internal.h
forward_part/logs/: Logger.cpp  Logger.h
forward_part/static/view/: email_verify.html  home.html  showfile.html  signin.html  signup.html
internal/: Logger.go  ali_oss.go  concul.go  db.go  jwt.go  kafka.go  minio.go  redis.go  viper_config_centre.go
log/: Logger.go
other_srv/email_srv/: CMakeLists.txt  KafkaConsumer.h  KafkaProducer.h  emailServer.h  emailsend.h  main.cpp  redispool.h
other_srv/email_srv/config/: config.cpp  config.h
other_srv/email_srv/log/: Logger.h
other_srv/store_srv/: go.mod  go.sum  main.go
other_srv/store_srv/ali_oss/: ali_oss.go
other_srv/store_srv/kafka/: kafkacunsumer.go  nacosConfig.go
other_srv/store_srv/localfile/: localfile.go
other_srv/store_srv/log/: Logger.go
proto/AI_srv/: ai.grpc.pb.cc  ai.grpc.pb.h  ai.pb.cc  ai.pb.h  ai.proto
proto/account_srv/: account.grpc.pb.cc  account.grpc.pb.h  account.pb.cc  account.pb.h  account.proto
proto/file_srv/: file.grpc.pb.cc  file.grpc.pb.h  file.pb.cc  file.pb.h  file.proto
scripts/: consul-statefulset.yaml  kafka.yaml  minio.yaml  mysql-deployment.yaml  mysql-schema.sql  nacos-deployment.yaml  nfs-provisioner.yaml  redis-deployment.yaml  services.yaml
